# simsAndGames

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  simsAndGames.sln
3d_builder/: 3d_builder.vcxproj  3d_builder.vcxproj.filters
3d_fx/: 3d_fx.vcxproj  3d_fx.vcxproj.filters
3d_physics/: 3d_physics.vcxproj  3d_physics.vcxproj.filters
a_star_nav/: a_star_nav.vcxproj  a_star_nav.vcxproj.filters  boulder.nav  roundabout.nav
asteroids/: asteroids.vcxproj  asteroids.vcxproj.filters
block_craft/: block_craft.vcxproj  block_craft.vcxproj.filters
cad/: cad.vcxproj  cad.vcxproj.filters
clock/: clock.vcxproj  clock.vcxproj.filters
clock_sim/: clock_sim.vcxproj  clock_sim.vcxproj.filters  compile_shaders.bat
cloth/: cloth.vcxproj  cloth.vcxproj.filters
common/: olcPGEX_Shaders.h  olcPGEX_TransformedView.h
emscripten_build/: compile.bat  compile_for_olc.bat  compile_for_sokol.bat  index.html  sokol_shell.html
eulerian_fluid/: eulerian_fluid.vcxproj  eulerian_fluid.vcxproj.filters
flip_fluid/: flip_fluid.vcxproj  flip_fluid.vcxproj.filters
fluid/: fluid.vcxproj  fluid.vcxproj.filters
fracture/: fracture.vcxproj  fracture.vcxproj.filters
fruit_ninja/: fruit_ninja.vcxproj  fruit_ninja.vcxproj.filters
geometrize/: geometrize.vcxproj  geometrize.vcxproj.filters
glitch/: glitch.vcxproj  glitch.vcxproj.filters
imgui/: imgui.vcxitems
inverse_kinematics/: inverse_kinematics.vcxproj
jelly_car/: jelly_car.vcxproj  jelly_car.vcxproj.filters
jelly_car_clone/: jelly_car_clone.vcxproj  jelly_car_clone.vcxproj.filters  thinf  thing
magnets/: magnets.vcxproj  magnets.vcxproj.filters
pixels/: README.md  (+3 more)
(+532 files in other folders)
